# cash

./: CMakeLists.txt  README.md  plan.txt
include/: builtin.h  command.h  jobs.h  parse.h  signals.h
src/: builtin.c  builtin.h  command.c  command.h  consts.h  evaluate.c  evaluate.h  jobs.c  main.c  parse.c  parse.h  signals.c
